update JwtFilter